--- a/pom.xml
+++ b/pom.xml
@@ -1,78 +1,123 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
+           http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <modelVersion>4.0.0</modelVersion>
 
-    <groupId>io.github.devsha256</groupId>
-    <artifactId>sap-odata-app</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <name>sap-odata-app</name>
-    <description>Utility to extract SAP OData metadata for test data preparation</description>
-
-    <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.2.0</version> <relativePath/>
-    </parent>
-
-    <properties>
-        <java.version>17</java.version>
-        <sap-cloud-sdk.version>5.24.0</sap-cloud-sdk.version>
-    </properties>
-
-    <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>com.sap.cloud.sdk.datamodel</groupId>
-            <artifactId>odata-core</artifactId>
-            <version>${sap-cloud-sdk.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.sap.cloud.sdk.connectivity</groupId>
-            <artifactId>connectivity-core</artifactId>
-            <version>${sap-cloud-sdk.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-configuration-processor</artifactId>
-            <optional>true</optional>
-        </dependency>
-        <dependency>
+  <!-- Use the Spring Boot parent to ensure plugin defaults, dependency management, and manifest repackaging -->
+  <parent>
     <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-web</artifactId>
-</dependency>
+    <artifactId>spring-boot-starter-parent</artifactId>
+    <version>3.2.0</version>
+    <relativePath/> <!-- lookup from repository -->
+  </parent>
+
+  <groupId>io.github.devsha256</groupId>
+  <artifactId>sap-odata-app</artifactId>
+  <version>0.0.1-SNAPSHOT</version>
+  <packaging>jar</packaging>
+  <name>sap-odata-app</name>
+
+  <properties>
+    <java.version>17</java.version>
+    <!-- SAP Cloud SDK BOM (5.x series) -->
+    <sap.cloud.sdk.version>5.24.0</sap.cloud.sdk.version>
+  </properties>
+
+  <dependencyManagement>
+    <dependencies>
+      <!-- SAP Cloud SDK BOM - keeps SDK modules compatible -->
+      <dependency>
+        <groupId>com.sap.cloud.sdk</groupId>
+        <artifactId>sdk-bom</artifactId>
+        <version>${sap.cloud.sdk.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <!-- (spring-boot-dependencies already provided by parent) -->
     </dependencies>
+  </dependencyManagement>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>${java.version}</source>
-                    <target>${java.version}</target>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
+  <dependencies>
+    <!-- Spring Boot starters -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
 
-    <repositories>
-        <repository>
-            <id>sap-cloud-sdk-maven-repository</id>
-            <name>SAP Cloud SDK Maven Repository</name>
-            <url>https://maven.pkg.github.com/SAP/cloud-sdk-java/</url>
-        </repository>
-    </repositories>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-validation</artifactId>
+    </dependency>
 
+    <!-- SAP Cloud SDK core -->
+    <dependency>
+      <groupId>com.sap.cloud.sdk</groupId>
+      <artifactId>sdk-core</artifactId>
+    </dependency>
+
+    <!-- Cloud platform connectivity (DefaultHttpDestination builder) -->
+    <dependency>
+      <groupId>com.sap.cloud.sdk.cloudplatform</groupId>
+      <artifactId>cloudplatform-connectivity</artifactId>
+    </dependency>
+
+    <!-- OData client modules -->
+    <dependency>
+      <groupId>com.sap.cloud.sdk.datamodel</groupId>
+      <artifactId>odata-client</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.sap.cloud.sdk.datamodel</groupId>
+      <artifactId>odata-v4-core</artifactId>
+    </dependency>
+
+    <!-- Jackson (provided transitively but explicit is fine) -->
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+    </dependency>
+
+    <!-- Use Apache HttpClient v4 to match the Cloud SDK HttpClientAccessor -->
+    <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpclient</artifactId>
+      <version>4.5.13</version>
+    </dependency>
+
+    <!-- add if missing -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-tomcat</artifactId>
+    </dependency>
+
+
+    <!-- Test dependencies -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-test</artifactId>
+      <scope>test</scope>
+    </dependency>
+  </dependencies>
+
+  <build>
+    <plugins>
+      <!-- Spring Boot plugin - parent applies correct version but declare it explicitly to be safe -->
+      <plugin>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+      </plugin>
+
+      <!-- Compiler -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.11.0</version>
+        <configuration>
+          <release>${java.version}</release>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
