--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -69,3 +69,4 @@ spring.mvc.async.request-timeout=30000
 
 # These do **not** affect SAP Cloud SDK HttpClient, but good defaults for the app
 spring.webflux.base-path=/
+app.security.insecure-trust-all=true
